added package for user profile

--- a/templates/views/message.hbs
+++ b/templates/views/message.hbs
@@ -1,7 +1,7 @@
 {{>header}}
 {{>nav}}
 
-<div class="container message-container">
+<div class="container form-container">
 
     <form action="/message" method="POST">
         <div class="form-group">
