--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,11 +19,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="">Login</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="">Sign Up</a>
+                        <a class="nav-link" href="/signup">Sign Up</a>
                     </li>
 
                 </ul>
