--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -16,11 +16,11 @@
                     <a class="nav-link" href="/message">Try Now</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/users/login">Login</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/signup">Sign Up</a>
+                    <a class="nav-link" href="/users/signup">Sign Up</a>
                 </li>
 
             </ul>
