--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -2,8 +2,8 @@
 {{>nav}}
 
 <div class="container form-container">
-    <h1>Sign Up</h1>
-    <form class="signup" action="/users/signup" method="POST">
+    <h1>Login</h1>
+    <form class="login" action="/users/login" method="POST">
         <div class="form-group">
             <label>Username</label>
             <input type="text" class="form-control" placeholder="Enter username" name="username">
@@ -12,11 +12,7 @@
             <label>Password</label>
             <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
-        <div class="form-group">
-            <label>Confirm Password</label>
-            <input type="password" class="form-control" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 </div>
 
