--- a/templates/views/message.hbs
+++ b/templates/views/message.hbs
@@ -2,10 +2,10 @@
 {{>nav}}
 
 <div class="container form-container">
-
-    <form action="/message" method="POST">
+ <h1>Try Now!</h1>
+    <form class="tryNow" action="/message" method="POST">
         <div class="form-group">
-             <label for="yourMessage">Your message</label>
+             <label for="yourMessage">Enter your message here</label>
            <input class="form-control" type="text" placeholder="Enter your message" name="messageBody" id="yourMessage">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
