--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,15 +17,23 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/message">Try Now!</a>
                     </li>
+                    {{#if user}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/dashboard">View Dashboard</a>
+                    </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/logout">Logout</a>
+                    </li>   
+                    {{else}}
                     <li class="nav-item">
                         <a class="nav-link" href="/users/login">Login</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="/users/signup">Sign Up</a>
-                    </li>
-
+                    </li>   
+                    {{/if}}
                 </ul>
 
             </div>
