added avatar upload route

--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -16,6 +16,11 @@
             <label>Confirm Password</label>
             <input type="password" class="form-control" placeholder="Password">
         </div>
+
+        <div class="form-group">
+            <label>Upload Avatar</label>
+             <input type="file" name="avatar" />
+        </div>
         <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
 </div>
