--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -3,6 +3,7 @@
 
 <div class="container form-container">
     <h1>Welcome, {{user.username}}</h1>
+    <img src={{user.avatarImageURL}} alt="">
     <div class="container form-container">
         <h4>Message History</h4>
         {{#each messages}}
