--- a/templates/views/upload.hbs
+++ b/templates/views/upload.hbs
@@ -2,17 +2,10 @@
 {{>nav}}
 
 <div class="container form-container">
-    <h1>Upload</h1>
-    <form method="post" enctype="multipart/form-data" action="/users/upload">
-        <p>
-            <input type="text" name="title" placeholder="optional title" />
-        </p>
-        <p>
-            <input type="file" name="upl" />
-        </p>
-        <p>
-            <input type="submit" />
-        </p>
+    <h1>Upload Avatar</h1>
+    <form action="/users/upload" method="POST" class="image-form" enctype="multipart/form-data">
+        <input id="image-upload" class="file-add" type="file" accept="image/*" name="avatar" />
+        <button  class="btn btn-primary" type="submit" id="image-upload" class="sinsup-button">Upload Image</button>
     </form>
 </div>
 
